<resources>
    <string name="app_name">VkMessager</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <integer name="com_vk_sdk_AppId">5042596</integer>
    <string name="action_sign_in_short">Sign in with VK</string>
    <string name="continue_using_app">Continue using test application</string>
    <string name="logout">Logout</string>
    <string name="action_sign_in_force">Force OAuth</string>
    <string name="users_get">users.get</string>
    <string name="friends_get">friends.get</string>
    <string name="messages_get">messages.get</string>
    <string name="dialogs_get">dialogs.get</string>
    <string name="captcha_force">captcha.force</string>
    <string name="wall_post">wall.post</string>
    <string name="wall_getById">wall.getById</string>
    <string name="upload_photo">upload photo</string>
    <string name="upload_photo_to_wall">upload photo to wall</string>
    <string name="upload_several_photos_to_wall">upload several photos to wall</string>
    <string name="upload_doc">upload doc</string>
    <string name="test_validation">Test validation</string>
    <string name="test_share">Test share dialog</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="more">More</string>
    <string name="favorites">Favorites</string>
    <string name="aboutUser">О себе</string>
    <string name="friends">Друзья</string>
    <string name="FIO">ФИО:</string>
    <string name="bDate">Дата рождения:</string>
    <string name="city">Город:</string>
    <string name="country">Страна:</string>
    <string name="university">Университет:</string>
    <string name="faculty">Факультет:</string>
    <string name="messages">Сообщения</string>
    <string name="dialogs">Диалоги</string>
</resources>
